# a3data-backend-se-challenge

./: .env-sample  .gitignore  .mise.toml  LICENSE  README.md  docker-compose.yaml
nuvie-backend/: .env-sample  README.md  auth.py  dockerfile  main.py  pyproject.toml
nuvie-backend/src/: __init__.py  auth.py  constants.py  db.py  logger.py  main.py
nuvie-backend/src/api/: __init__.py  deps.py
nuvie-backend/src/api/routes/: login.py  patients.py  users.py
nuvie-ingestor/: .env-sample  README.md  main.py  pyproject.toml  requirements.txt
nuvie-ingestor/src/: constants.py  db.py  main.py
nuvie-sdk/: .env-sample  README.md  constants.py  main.py  pyproject.toml
nuvie-sdk/alembic/: env.py  script.py.mako
nuvie-sdk/alembic/versions/: 2025_08_04_0421-d1f9b58feb66_add_user_table.py
nuvie-sdk/models/: __init__.py
nuvie-sdk/nuvie_sdk/: __init__.py  alembic.ini  auth.py  constants.py
nuvie-sdk/nuvie_sdk/alembic/: env.py
nuvie-sdk/nuvie_sdk/alembic/versions/: 2025_08_04_0421-d1f9b58feb66_add_user_table.py  2025_08_05_0438-172d07dc80b4_create_patients_table.py
nuvie-sdk/nuvie_sdk/models/: __init__.py  patient.py  user.py
nuvie-sdk/nuvie_sdk/use_cases/: __init__.py  patient_use_case.py  user_use_case.py
