[project]
name = "nuvie-backend"
version = "0.1.0"
description = "Back-end for Nuvie's project. Exposes an API for handling and managing synthetic data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "nuvie-sdk",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "ruff>=0.12.7",
]
migrations = []


[tool.ruff]
line-length = 79


[tool.ruff.lint]
# Adding rules to the enforced rule set.
extend-select = [
    "E501", # line-too-long
    "UP",  # pyupgrade
]
extend-ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
]

[tool.uv.sources]
nuvie-sdk = { path = "../nuvie-sdk", editable = true }
