[project]
name = "nuvie-sdk"
version = "0.1.0"
description = "SDK for Nuvie's project. Contains data models and use cases for interecting with Nuvie's DB. To be used by any other project in the eco-system. Follows semantic versioning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel>=0.0.24",
    "bcrypt>=4.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pydantic[email]>=2.11.7",
    "alembic[tz]>=1.16.4",
    "alembic-postgresql-enum>=1.8.0",
    "psycopg>=3.2.9",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "ruff>=0.12.7",
]


[tool.ruff]
line-length = 79


[tool.ruff.lint]
# Adding rules to the enforced rule set.
extend-select = [
    "E501", # line-too-long
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
extend-ignore = [
    "D202", # No blank lines allowed after function docstring,
    "D212", # Multi-line docstring summary should start at the first line
    "F403", # 'from module import *' used; unable to detect undefined names
]


[tool.ruff.lint.pydocstyle]
convention = "google"


# [tool.alembic]

